# prediction_market_frameworks

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  setting_up_allowance.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  test.yml
connectors/: abstract_connector.py
connectors/data/: abstract_data_connector.py  polymarket_data_connector.py
connectors/execution/: abstract_execution_connector.py  polymarket_execution_connector.py
docs/: api.md  pagination.md
examples/: auth_example.py  basic_usage.py  logging_example.py  pagination_example.py  performance_logging_example.py
src/: __init__.py  clob_client.py
src/configs/: __init__.py
src/data_frameworks/: __init__.py
src/data_frameworks/core/: base_orchestrator.py  unified_interface.py
src/data_frameworks/core/shared_models/: __init__.py  base_data.py  query.py
src/data_frameworks/domains/: __init__.py
src/data_frameworks/domains/financial_data/: __init__.py
src/data_frameworks/domains/financial_data/adapters/clients/: binance_client.py  coinbase_client.py
src/data_frameworks/domains/financial_data/core/: data_orchestrator.py
src/data_frameworks/domains/financial_data/core/models/: price.py  ticker.py
src/data_frameworks/domains/financial_data/ports/: financial_data_port.py
src/data_frameworks/domains/news/: __init__.py
src/data_frameworks/domains/news/adapters/clients/: news_api_client.py  reddit_client.py
src/data_frameworks/domains/news/core/: data_orchestrator.py
src/data_frameworks/domains/news/core/models/: article.py  sentiment.py
src/data_frameworks/domains/news/ports/: news_port.py
src/data_frameworks/domains/prediction_markets/: __init__.py
src/data_frameworks/domains/prediction_markets/adapters/clients/: gamma_client.py  polymarket_client.py
src/data_frameworks/domains/prediction_markets/adapters/data_adapters/: polymarket_data_adapter.py
src/data_frameworks/domains/prediction_markets/adapters/executor_adapters/: polymarket_executor_adapter.py
src/data_frameworks/domains/prediction_markets/core/: data_orchestrator.py  executor_orchestrator.py
src/data_frameworks/domains/prediction_markets/ports/: data_port.py  executor_port.py  orchestrator_port.py
src/data_frameworks/ports/: __init__.py  base_port.py  orchestrator_port.py
src/exceptions/: network_errors.py  validation_errors.py
src/models/: __init__.py  activity.py  order_response.py  pagination.py  trade_history.py
src/polymarket_client/: __init__.py  clob_client.py  gamma_client.py  logger.py  pagination.py  polymarket_client.py  rate_limiter.py  sanitization.py
src/polymarket_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/polymarket_client/auth/: __init__.py  auth_middleware.py  request_signer.py  signature_validator.py
src/polymarket_client/configs/: __init__.py  polymarket_configs.py
src/polymarket_client/exceptions/: __init__.py  api_errors.py  base.py  network_errors.py  validation_errors.py
src/polymarket_client/mixins/: __init__.py  pagination_mixin.py
src/polymarket_client/models/: __init__.py  activity.py  cancel_response.py  event.py  limit_order_request.py  market.py  order.py  order_book.py  order_response.py  pagination.py  position.py  price_history.py  trade_history.py
src/prediction_market_frameworks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/prediction_market_frameworks/adapters/: polymarket_configs.py
src/prediction_market_frameworks/adapters/clients/: clob_client.py  polymarket_client.py
src/prediction_market_frameworks/adapters/data_adapters/: polymarket_data_adapter.py
src/prediction_market_frameworks/core/models/: event.py  market.py  order_book.py
src/prediction_market_frameworks/ports/: data_port.py  executor_port.py  port.py
strategies/: base_strategies.py
tests/: __init__.py  conftest.py  test_auth.py  test_clob_client.py  test_exceptions.py  test_gamma_client.py  test_integration.py  test_performance_logging.py  test_polymarket_client.py  test_rate_limiter.py  test_sanitization.py
